// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dynamic imports > babel > transforms example test case: browser-current-esm > esm/bundle-D82STK_r.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-D82STK_r.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-current-esm > esm/index-browser-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm

import('./bundle-D82STK_r.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-D82STK_r.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-current-esm.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-current-lib > lib/bundle-Bq7r2jrL.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-Bq7r2jrL.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-current-lib > lib/index-browser-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib

'use strict';

import('./bundle-Bq7r2jrL.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-Bq7r2jrL.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-current-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-current-umd > umd/bundle-D9oOijGe.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: current, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-D9oOijGe.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-current-umd > umd/index-browser-current-umd.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: umd

import('./bundle-D9oOijGe.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-D9oOijGe.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-current-umd.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-experimental-esm > esm/bundle-W-WVz7e7.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-W-WVz7e7.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-experimental-esm > esm/index-browser-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm

import('./bundle-W-WVz7e7.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-W-WVz7e7.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-experimental-esm.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-experimental-lib > lib/bundle-CZ-rm3zT.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-CZ-rm3zT.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-experimental-lib > lib/index-browser-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib

'use strict';

import('./bundle-CZ-rm3zT.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-CZ-rm3zT.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-experimental-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-experimental-umd > umd/bundle-BN3HgrXG.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: experimental, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-BN3HgrXG.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-experimental-umd > umd/index-browser-experimental-umd.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: umd

import('./bundle-BN3HgrXG.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-BN3HgrXG.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-legacy-esm > esm/bundle-BmLKGDrv.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-BmLKGDrv.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-legacy-esm > esm/index-browser-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm

import('./bundle-BmLKGDrv.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-BmLKGDrv.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-legacy-esm.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-legacy-lib > lib/bundle-BjYzmFy9.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-BjYzmFy9.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-legacy-lib > lib/index-browser-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

import('./bundle-BjYzmFy9.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-BjYzmFy9.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-legacy-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-legacy-umd > umd/bundle-C1Y69HP8.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-C1Y69HP8.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-legacy-umd > umd/index-browser-legacy-umd.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: umd

import('./bundle-C1Y69HP8.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-C1Y69HP8.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-stable-esm > esm/bundle-DdcL7K5d.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-DdcL7K5d.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-stable-esm > esm/index-browser-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

import('./bundle-DdcL7K5d.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-DdcL7K5d.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-stable-esm.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-stable-lib > lib/bundle-Ucw2QFX_.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-Ucw2QFX_.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-stable-lib > lib/index-browser-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

import('./bundle-Ucw2QFX_.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-Ucw2QFX_.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-stable-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-stable-umd > umd/bundle-CMm7JrmR.js 1`] = `
"(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-CMm7JrmR.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: browser-stable-umd > umd/index-browser-stable-umd.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: umd

import('./bundle-CMm7JrmR.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-CMm7JrmR.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-stable-umd.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-current-esm > esm/bundle-BwKU3we9.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-BwKU3we9.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-current-esm > esm/index-electron-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm

import('./bundle-BwKU3we9.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-BwKU3we9.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-current-esm.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-current-lib > lib/bundle-CcB-Z59d.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-CcB-Z59d.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-current-lib > lib/index-electron-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib

'use strict';

import('./bundle-CcB-Z59d.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-CcB-Z59d.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-current-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-experimental-esm > esm/bundle-8c6lkRLE.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-8c6lkRLE.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-experimental-esm > esm/index-electron-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm

import('./bundle-8c6lkRLE.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-8c6lkRLE.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-experimental-esm.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-experimental-lib > lib/bundle-5f9vkDmK.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-5f9vkDmK.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-experimental-lib > lib/index-electron-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib

'use strict';

import('./bundle-5f9vkDmK.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-5f9vkDmK.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-experimental-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-legacy-esm > esm/bundle-CPi22CpX.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-CPi22CpX.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-legacy-esm > esm/index-electron-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm

import('./bundle-CPi22CpX.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-CPi22CpX.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-legacy-esm.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-legacy-lib > lib/bundle-CmvYKEmi.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-CmvYKEmi.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-legacy-lib > lib/index-electron-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib

'use strict';

import('./bundle-CmvYKEmi.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-CmvYKEmi.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-legacy-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-stable-esm > esm/bundle-N2wmUB4h.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-N2wmUB4h.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-stable-esm > esm/index-electron-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm

import('./bundle-N2wmUB4h.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-N2wmUB4h.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-stable-esm.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-stable-lib > lib/bundle-CPNlHAFQ.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-CPNlHAFQ.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: electron-stable-lib > lib/index-electron-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib

'use strict';

import('./bundle-CPNlHAFQ.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-CPNlHAFQ.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-stable-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-current-esm > esm/bundle-Z5ELlHRO.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-Z5ELlHRO.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-current-esm > esm/index-native-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: esm

import('./bundle-Z5ELlHRO.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-Z5ELlHRO.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-current-esm.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-current-lib > lib/bundle-C9B7Zqwp.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-C9B7Zqwp.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-current-lib > lib/index-native-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib

'use strict';

import('./bundle-C9B7Zqwp.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-C9B7Zqwp.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-current-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-experimental-esm > esm/bundle-B6wDYFRF.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-B6wDYFRF.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-experimental-esm > esm/index-native-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: esm

import('./bundle-B6wDYFRF.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-B6wDYFRF.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-experimental-esm.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-experimental-lib > lib/bundle-C20QOfW7.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-C20QOfW7.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-experimental-lib > lib/index-native-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

import('./bundle-C20QOfW7.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-C20QOfW7.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-experimental-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-legacy-esm > esm/bundle-QC_8PKdX.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-QC_8PKdX.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-legacy-esm > esm/index-native-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: esm

import('./bundle-QC_8PKdX.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-QC_8PKdX.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-legacy-esm.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-legacy-lib > lib/bundle-B7BhzbO0.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-B7BhzbO0.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-legacy-lib > lib/index-native-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib

'use strict';

import('./bundle-B7BhzbO0.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-B7BhzbO0.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-legacy-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-stable-esm > esm/bundle-DMvfKcwU.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-DMvfKcwU.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-stable-esm > esm/index-native-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: esm

import('./bundle-DMvfKcwU.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-DMvfKcwU.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-stable-esm.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-stable-lib > lib/bundle-xh_8fCfs.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-xh_8fCfs.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: native-stable-lib > lib/index-native-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

import('./bundle-xh_8fCfs.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-xh_8fCfs.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-stable-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-current-cjs > cjs/bundle-ChQgONl7.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-ChQgONl7.cjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-current-cjs > cjs/index-node-current-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

import('./bundle-ChQgONl7.cjs').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-ChQgONl7.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-current-cjs.cjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-current-cjs > cjs/index-node-current-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-current-cjs.cjs';"
`;

exports[`Dynamic imports > babel > transforms example test case: node-current-lib > lib/bundle-G0qgVHQZ.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-G0qgVHQZ.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-current-lib > lib/index-node-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib

'use strict';

import('./bundle-G0qgVHQZ.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-G0qgVHQZ.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-current-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-current-mjs > mjs/bundle-DakD1F53.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-DakD1F53.mjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-current-mjs > mjs/index-node-current-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs

import('./bundle-DakD1F53.mjs').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-DakD1F53.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-current-mjs.mjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-experimental-cjs > cjs/bundle-DZUya8wb.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-DZUya8wb.cjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs

'use strict';

import('./bundle-DZUya8wb.cjs').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-DZUya8wb.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-experimental-cjs.cjs';"
`;

exports[`Dynamic imports > babel > transforms example test case: node-experimental-lib > lib/bundle-D3PZHRSm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-D3PZHRSm.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-experimental-lib > lib/index-node-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib

'use strict';

import('./bundle-D3PZHRSm.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-D3PZHRSm.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-experimental-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-experimental-mjs > mjs/bundle-B0XLXup0.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-B0XLXup0.mjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-experimental-mjs > mjs/index-node-experimental-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs

import('./bundle-B0XLXup0.mjs').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-B0XLXup0.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-legacy-cjs > cjs/bundle-BFOaEL8C.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-BFOaEL8C.cjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs

'use strict';

import('./bundle-BFOaEL8C.cjs').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-BFOaEL8C.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-legacy-cjs.cjs';"
`;

exports[`Dynamic imports > babel > transforms example test case: node-legacy-lib > lib/bundle-DUpKNZJ-.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-DUpKNZJ-.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-legacy-lib > lib/index-node-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib

'use strict';

import('./bundle-DUpKNZJ-.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-DUpKNZJ-.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-legacy-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-legacy-mjs > mjs/bundle-fmin1R5t.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-fmin1R5t.mjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-legacy-mjs > mjs/index-node-legacy-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs

import('./bundle-fmin1R5t.mjs').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-fmin1R5t.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-stable-cjs > cjs/bundle-C4XEzhWi.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-C4XEzhWi.cjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

import('./bundle-C4XEzhWi.cjs').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-C4XEzhWi.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-stable-cjs.cjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-stable-cjs.cjs';"
`;

exports[`Dynamic imports > babel > transforms example test case: node-stable-lib > lib/bundle-Bsa35Cn_.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-Bsa35Cn_.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-stable-lib > lib/index-node-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

import('./bundle-Bsa35Cn_.js').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-Bsa35Cn_.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-stable-lib.js.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-stable-mjs > mjs/bundle-C1_vvsAZ.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-C1_vvsAZ.mjs.map
"
`;

exports[`Dynamic imports > babel > transforms example test case: node-stable-mjs > mjs/index-node-stable-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

import('./bundle-C1_vvsAZ.mjs').then(result => {
  result.foo();
});
import(/* webpackChunkName: "helpers" */'./bundle-C1_vvsAZ.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-stable-mjs.mjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-current-esm > esm/bundle-o54aPLkM.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-o54aPLkM.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-current-esm > esm/index-browser-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
import('./bundle-o54aPLkM.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-o54aPLkM.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-browser-current-esm.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-current-lib > lib/bundle-CW8zVdan.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-CW8zVdan.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-current-lib > lib/index-browser-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';
import('./bundle-CW8zVdan.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-CW8zVdan.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-browser-current-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-current-umd > umd/bundle-M3oBoAdi.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: Object.getOwnPropertyDescriptor(all, name).get
        });
    }
    _export(exports, {
        get bar () {
            return bar;
        },
        get foo () {
            return foo;
        }
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-M3oBoAdi.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-current-umd > umd/index-browser-current-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    function _getRequireWildcardCache(nodeInterop) {
        if (typeof WeakMap !== "function") return null;
        var cacheBabelInterop = new WeakMap();
        var cacheNodeInterop = new WeakMap();
        return (_getRequireWildcardCache = function(nodeInterop) {
            return nodeInterop ? cacheNodeInterop : cacheBabelInterop;
        })(nodeInterop);
    }
    function _interop_require_wildcard(obj, nodeInterop) {
        if (!nodeInterop && obj && obj.__esModule) {
            return obj;
        }
        if (obj === null || typeof obj !== "object" && typeof obj !== "function") {
            return {
                default: obj
            };
        }
        var cache = _getRequireWildcardCache(nodeInterop);
        if (cache && cache.has(obj)) {
            return cache.get(obj);
        }
        var newObj = {
            __proto__: null
        };
        var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor;
        for(var key in obj){
            if (key !== "default" && Object.prototype.hasOwnProperty.call(obj, key)) {
                var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null;
                if (desc && (desc.get || desc.set)) {
                    Object.defineProperty(newObj, key, desc);
                } else {
                    newObj[key] = obj[key];
                }
            }
        }
        newObj.default = obj;
        if (cache) {
            cache.set(obj, newObj);
        }
        return newObj;
    }
    import('./bundle-M3oBoAdi.js').then((result)=>{
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ './bundle-M3oBoAdi.js').then(({ bar })=>{
        bar();
    });
});
//# sourceMappingURL=index-browser-current-umd.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-experimental-esm > esm/bundle-D4BY6a5Q.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-D4BY6a5Q.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-experimental-esm > esm/index-browser-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
import('./bundle-D4BY6a5Q.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-D4BY6a5Q.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-browser-experimental-esm.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-experimental-lib > lib/bundle-D10yhi0X.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-D10yhi0X.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-experimental-lib > lib/index-browser-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';
import('./bundle-D10yhi0X.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-D10yhi0X.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-browser-experimental-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-experimental-umd > umd/bundle-M3oBoAdi.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: Object.getOwnPropertyDescriptor(all, name).get
        });
    }
    _export(exports, {
        get bar () {
            return bar;
        },
        get foo () {
            return foo;
        }
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-M3oBoAdi.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-experimental-umd > umd/index-browser-experimental-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    function _getRequireWildcardCache(nodeInterop) {
        if (typeof WeakMap !== "function") return null;
        var cacheBabelInterop = new WeakMap();
        var cacheNodeInterop = new WeakMap();
        return (_getRequireWildcardCache = function(nodeInterop) {
            return nodeInterop ? cacheNodeInterop : cacheBabelInterop;
        })(nodeInterop);
    }
    function _interop_require_wildcard(obj, nodeInterop) {
        if (!nodeInterop && obj && obj.__esModule) {
            return obj;
        }
        if (obj === null || typeof obj !== "object" && typeof obj !== "function") {
            return {
                default: obj
            };
        }
        var cache = _getRequireWildcardCache(nodeInterop);
        if (cache && cache.has(obj)) {
            return cache.get(obj);
        }
        var newObj = {
            __proto__: null
        };
        var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor;
        for(var key in obj){
            if (key !== "default" && Object.prototype.hasOwnProperty.call(obj, key)) {
                var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null;
                if (desc && (desc.get || desc.set)) {
                    Object.defineProperty(newObj, key, desc);
                } else {
                    newObj[key] = obj[key];
                }
            }
        }
        newObj.default = obj;
        if (cache) {
            cache.set(obj, newObj);
        }
        return newObj;
    }
    import('./bundle-M3oBoAdi.js').then((result)=>{
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ './bundle-M3oBoAdi.js').then(({ bar })=>{
        bar();
    });
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-legacy-esm > esm/bundle-CZ6Dz33i.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-CZ6Dz33i.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-legacy-esm > esm/index-browser-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
import('./bundle-CZ6Dz33i.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-CZ6Dz33i.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-browser-legacy-esm.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-legacy-lib > lib/bundle-D1ovl8sQ.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-D1ovl8sQ.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-legacy-lib > lib/index-browser-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';
import('./bundle-D1ovl8sQ.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-D1ovl8sQ.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-browser-legacy-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-legacy-umd > umd/bundle-M3oBoAdi.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: Object.getOwnPropertyDescriptor(all, name).get
        });
    }
    _export(exports, {
        get bar () {
            return bar;
        },
        get foo () {
            return foo;
        }
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-M3oBoAdi.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-legacy-umd > umd/index-browser-legacy-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    function _getRequireWildcardCache(nodeInterop) {
        if (typeof WeakMap !== "function") return null;
        var cacheBabelInterop = new WeakMap();
        var cacheNodeInterop = new WeakMap();
        return (_getRequireWildcardCache = function(nodeInterop) {
            return nodeInterop ? cacheNodeInterop : cacheBabelInterop;
        })(nodeInterop);
    }
    function _interop_require_wildcard(obj, nodeInterop) {
        if (!nodeInterop && obj && obj.__esModule) {
            return obj;
        }
        if (obj === null || typeof obj !== "object" && typeof obj !== "function") {
            return {
                default: obj
            };
        }
        var cache = _getRequireWildcardCache(nodeInterop);
        if (cache && cache.has(obj)) {
            return cache.get(obj);
        }
        var newObj = {
            __proto__: null
        };
        var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor;
        for(var key in obj){
            if (key !== "default" && Object.prototype.hasOwnProperty.call(obj, key)) {
                var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null;
                if (desc && (desc.get || desc.set)) {
                    Object.defineProperty(newObj, key, desc);
                } else {
                    newObj[key] = obj[key];
                }
            }
        }
        newObj.default = obj;
        if (cache) {
            cache.set(obj, newObj);
        }
        return newObj;
    }
    import('./bundle-M3oBoAdi.js').then((result)=>{
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ './bundle-M3oBoAdi.js').then(({ bar })=>{
        bar();
    });
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-stable-esm > esm/bundle-B1xFAPmz.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-B1xFAPmz.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-stable-esm > esm/index-browser-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
import('./bundle-B1xFAPmz.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-B1xFAPmz.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-browser-stable-esm.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-stable-lib > lib/bundle-BqRtymkt.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-BqRtymkt.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-stable-lib > lib/index-browser-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';
import('./bundle-BqRtymkt.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-BqRtymkt.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-browser-stable-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-stable-umd > umd/bundle-M3oBoAdi.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: Object.getOwnPropertyDescriptor(all, name).get
        });
    }
    _export(exports, {
        get bar () {
            return bar;
        },
        get foo () {
            return foo;
        }
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-M3oBoAdi.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: browser-stable-umd > umd/index-browser-stable-umd.js 1`] = `
"(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    function _getRequireWildcardCache(nodeInterop) {
        if (typeof WeakMap !== "function") return null;
        var cacheBabelInterop = new WeakMap();
        var cacheNodeInterop = new WeakMap();
        return (_getRequireWildcardCache = function(nodeInterop) {
            return nodeInterop ? cacheNodeInterop : cacheBabelInterop;
        })(nodeInterop);
    }
    function _interop_require_wildcard(obj, nodeInterop) {
        if (!nodeInterop && obj && obj.__esModule) {
            return obj;
        }
        if (obj === null || typeof obj !== "object" && typeof obj !== "function") {
            return {
                default: obj
            };
        }
        var cache = _getRequireWildcardCache(nodeInterop);
        if (cache && cache.has(obj)) {
            return cache.get(obj);
        }
        var newObj = {
            __proto__: null
        };
        var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor;
        for(var key in obj){
            if (key !== "default" && Object.prototype.hasOwnProperty.call(obj, key)) {
                var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null;
                if (desc && (desc.get || desc.set)) {
                    Object.defineProperty(newObj, key, desc);
                } else {
                    newObj[key] = obj[key];
                }
            }
        }
        newObj.default = obj;
        if (cache) {
            cache.set(obj, newObj);
        }
        return newObj;
    }
    import('./bundle-M3oBoAdi.js').then((result)=>{
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ './bundle-M3oBoAdi.js').then(({ bar })=>{
        bar();
    });
});
//# sourceMappingURL=index-browser-stable-umd.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-current-esm > esm/bundle-CVb_MZbN.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-CVb_MZbN.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-current-esm > esm/index-electron-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm
import('./bundle-CVb_MZbN.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-CVb_MZbN.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-current-esm.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-current-lib > lib/bundle-BgKksy3y.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-BgKksy3y.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-current-lib > lib/index-electron-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib
'use strict';
import('./bundle-BgKksy3y.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-BgKksy3y.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-current-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-experimental-esm > esm/bundle-DVyqJdvC.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-DVyqJdvC.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-experimental-esm > esm/index-electron-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm
import('./bundle-DVyqJdvC.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-DVyqJdvC.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-experimental-esm.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-experimental-lib > lib/bundle-CM57GYzk.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-CM57GYzk.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-experimental-lib > lib/index-electron-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib
'use strict';
import('./bundle-CM57GYzk.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-CM57GYzk.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-experimental-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-legacy-esm > esm/bundle-p1JZMNkU.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-p1JZMNkU.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-legacy-esm > esm/index-electron-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm
import('./bundle-p1JZMNkU.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-p1JZMNkU.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-legacy-esm.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-legacy-lib > lib/bundle-La6PuSK-.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-La6PuSK-.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-legacy-lib > lib/index-electron-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib
'use strict';
import('./bundle-La6PuSK-.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-La6PuSK-.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-legacy-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-stable-esm > esm/bundle-CfPM3Zpt.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-CfPM3Zpt.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-stable-esm > esm/index-electron-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm
import('./bundle-CfPM3Zpt.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-CfPM3Zpt.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-stable-esm.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-stable-lib > lib/bundle-DyJKaxAr.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-DyJKaxAr.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: electron-stable-lib > lib/index-electron-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib
'use strict';
import('./bundle-DyJKaxAr.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-DyJKaxAr.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-stable-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-current-esm > esm/bundle-C_lRfQSX.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-C_lRfQSX.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-current-esm > esm/index-native-current-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: esm
import('./bundle-C_lRfQSX.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-C_lRfQSX.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-native-current-esm.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-current-lib > lib/bundle-C7b88r3G.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-C7b88r3G.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-current-lib > lib/index-native-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';
import('./bundle-C7b88r3G.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-C7b88r3G.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-native-current-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-experimental-esm > esm/bundle-DUgQ5Qhf.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-DUgQ5Qhf.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-experimental-esm > esm/index-native-experimental-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: esm
import('./bundle-DUgQ5Qhf.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-DUgQ5Qhf.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-native-experimental-esm.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-experimental-lib > lib/bundle-C12ODTOB.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-C12ODTOB.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-experimental-lib > lib/index-native-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';
import('./bundle-C12ODTOB.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-C12ODTOB.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-native-experimental-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-legacy-esm > esm/bundle-IT4omLOu.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-IT4omLOu.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-legacy-esm > esm/index-native-legacy-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: esm
import('./bundle-IT4omLOu.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-IT4omLOu.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-native-legacy-esm.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-legacy-lib > lib/bundle-BTP0QaN8.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-BTP0QaN8.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-legacy-lib > lib/index-native-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
'use strict';
import('./bundle-BTP0QaN8.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-BTP0QaN8.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-native-legacy-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-stable-esm > esm/bundle-B6CPteDF.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-B6CPteDF.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-stable-esm > esm/index-native-stable-esm.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: esm
import('./bundle-B6CPteDF.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-B6CPteDF.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-native-stable-esm.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-stable-lib > lib/bundle-JNa9d9wG.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-JNa9d9wG.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: native-stable-lib > lib/index-native-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';
import('./bundle-JNa9d9wG.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-JNa9d9wG.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-native-stable-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-current-cjs > cjs/bundle-BKzbCmVj.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-BKzbCmVj.cjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-current-cjs > cjs/index-node-current-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';
import('./bundle-BKzbCmVj.cjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-BKzbCmVj.cjs').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-current-cjs.cjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-current-cjs > cjs/index-node-current-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-current-cjs.cjs';"
`;

exports[`Dynamic imports > swc > transforms example test case: node-current-lib > lib/bundle-BdDEy4Gt.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-BdDEy4Gt.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-current-lib > lib/index-node-current-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';
import('./bundle-BdDEy4Gt.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-BdDEy4Gt.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-current-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-current-mjs > mjs/bundle-RyM8VMjz.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-RyM8VMjz.mjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-current-mjs > mjs/index-node-current-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
import('./bundle-RyM8VMjz.mjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-RyM8VMjz.mjs').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-current-mjs.mjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-experimental-cjs > cjs/bundle-BRN1f36b.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-BRN1f36b.cjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';
import('./bundle-BRN1f36b.cjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-BRN1f36b.cjs').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-experimental-cjs > cjs/index-node-experimental-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-experimental-cjs.cjs';"
`;

exports[`Dynamic imports > swc > transforms example test case: node-experimental-lib > lib/bundle-Dnc1QRuq.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-Dnc1QRuq.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-experimental-lib > lib/index-node-experimental-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';
import('./bundle-Dnc1QRuq.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-Dnc1QRuq.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-experimental-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-experimental-mjs > mjs/bundle-Ccj2_zcH.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-Ccj2_zcH.mjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-experimental-mjs > mjs/index-node-experimental-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
import('./bundle-Ccj2_zcH.mjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-Ccj2_zcH.mjs').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-legacy-cjs > cjs/bundle-DzeygFNh.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-DzeygFNh.cjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
'use strict';
import('./bundle-DzeygFNh.cjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-DzeygFNh.cjs').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-legacy-cjs > cjs/index-node-legacy-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-legacy-cjs.cjs';"
`;

exports[`Dynamic imports > swc > transforms example test case: node-legacy-lib > lib/bundle-D6HILdDf.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-D6HILdDf.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-legacy-lib > lib/index-node-legacy-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
'use strict';
import('./bundle-D6HILdDf.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-D6HILdDf.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-legacy-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-legacy-mjs > mjs/bundle-Bmjk9_Ju.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-Bmjk9_Ju.mjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-legacy-mjs > mjs/index-node-legacy-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
import('./bundle-Bmjk9_Ju.mjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-Bmjk9_Ju.mjs').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-stable-cjs > cjs/bundle-DPzzU3Bg.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-DPzzU3Bg.cjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs.cjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';
import('./bundle-DPzzU3Bg.cjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-DPzzU3Bg.cjs').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-stable-cjs.cjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-stable-cjs > cjs/index-node-stable-cjs-wrapper.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-stable-cjs.cjs';"
`;

exports[`Dynamic imports > swc > transforms example test case: node-stable-lib > lib/bundle-kZtTRhg3.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-kZtTRhg3.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-stable-lib > lib/index-node-stable-lib.js 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';
import('./bundle-kZtTRhg3.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-kZtTRhg3.js').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-stable-lib.js.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-stable-mjs > mjs/bundle-BbpcT7zq.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-BbpcT7zq.mjs.map
"
`;

exports[`Dynamic imports > swc > transforms example test case: node-stable-mjs > mjs/index-node-stable-mjs.mjs 1`] = `
"// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
import('./bundle-BbpcT7zq.mjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-BbpcT7zq.mjs').then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-stable-mjs.mjs.map
"
`;
